# Tesseract

./: .gitignore  PERFECT_TIME_RESEARCH.md  Projeto.md  package-lock.json
UX/: UI.md
app/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: audio.rs  commands.rs  detective.rs  dsp.rs  dsp_primitives.rs  lib.rs  main.rs  playback.rs  slicer.rs
app/src/components/: AnalysisPanel.css  AnalysisPanel.tsx  ArrangementHeader.css  ArrangementHeader.tsx  ArrangementView.css  ArrangementView.tsx  BarRuler.css  BarRuler.tsx  Playhead.css  Playhead.tsx  TimeRuler.css  TimeRuler.tsx  TrackLane.css  TrackLane.tsx  TrackListItem.css  TrackListItem.tsx  TrackListPanel.css  TrackListPanel.tsx  TransportBar.css  TransportBar.tsx  WaveformCanvas.tsx
app/src/data/: mockProject.ts
app/src/engine/: audioEngine.ts  playheadDOM.ts  stemLoader.ts  tauri.ts  types.ts
app/src/hooks/: useArrangementDuration.ts  useAudioPlayback.ts  useGlobalFileDrop.ts  usePerfectTime.ts  useStemDrop.ts
app/src/store/: projectStore.ts  stemStore.ts
app/src/types/: project.ts
app/src/utils/: constants.ts
