[package]
name = "tesseract-engine"
version = "0.1.0"
description = "Tesseract — Algorithmic Mixdown Engine"
authors = ["Tesseract"]
edition = "2021"

[lib]
name = "tesseract_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tesseract-engine"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native audio (WASAPI via rodio/cpal — OutputStream !Send fica num thread dedicado)
rodio = { version = "0.19", features = ["symphonia-all"] }

# DSP core (análise espectral offline)
symphonia = { version = "0.5", features = ["wav", "flac", "mp3", "aac", "all-codecs"] }
rustfft  = "6"
ndarray  = { version = "0.16", features = ["rayon"] }
rayon    = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
